Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40978

font family name mismatch between localized and non-localized version

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.3.1
    • GUI: Font handling
    • None
    • Chinese font. linux, fontconfig.
    • Iddf9101e15a0e49c5ba4c049969fc90cb7853443

      Localized font family names and their aliases are stored in font database.
      However, fallbacksForFamily gets non-localized family names which results
      in family name mismatch in QFontDatabase::isSmoothlyScalable

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            li.qiu Li Qiu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes